--- a/node-typescript-petshop/package.json
+++ b/node-typescript-petshop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodets-pets",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "enginers": {
@@ -14,15 +14,10 @@
     "start-dev": "nodemon -e ts,json,mustache, src/server.ts"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/d7pimenta/nodets-pets.git"
+    "type": "git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/d7pimenta/nodets-pets/issues"
-  },
-  "homepage": "https://github.com/d7pimenta/nodets-pets#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
